feat(core): Allow for txt reports to be uploaded (#148)
* feat(core): Allow for txt reports to be uploaded

Co-authored-by: ben <benjamin.snyder@entegrasystems.com>
Co-authored-by: Emmanuelle Vargas-Gonzalez <emmanvg@users.noreply.github.com>

--- a/src/tram/tram/templates/base.html
+++ b/src/tram/tram/templates/base.html
@@ -49,7 +49,7 @@
                             <i class=" fas fa-upload"></i>
                         </label>
                         <input type="file" id="id-upload" style="display: none; height: max-content;"
-                            accept=".pdf,.docx,.html,.json">
+                            accept=".pdf,.docx,.html,.json,.txt">
                     </form>
                 </li>
                 <li class="navbar-item me-1">
