feat(export): add number of mappings in analyze and redownload report button
* Change this feature to use doc_id instead of doc name.
* Escape doc name in header value
* Don't show download button for docs that can't be downloaded (e.g. the
  bootstrap training data) as this introduces brittle edge cases.

--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -59,10 +59,12 @@
               Export
             </button>
             <div class="dropdown-menu" aria-labelledby="export-dropdown">
-              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json">JSON</a>
+              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json&?type=json">JSON</a>
             </div>
           </div>
-          <a href="/api/download/{{ report.name | cut:'Report for ' }}" class="btn btn-sm btn-outline-secondary">Download</a>
+          {% if report.document_id is not None %}
+          <a href="/api/download/{{ report.document_id }}" class="btn btn-sm btn-outline-secondary">Download</a>
+          {% endif %}
         </div>
       </td>
       <td>
