--- a/src/tram/tram/templates/analyze.html
+++ b/src/tram/tram/templates/analyze.html
@@ -32,7 +32,7 @@
         <div class="modal-content" id="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Mapping</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id='modal-body'>
                 <form id="add-technique-form">
