make the callback like the old style again
something was not working right and only deleted the last row

--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -35,7 +35,7 @@ Sentences may contain additional mappings.
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Mapping</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="add-technique-form">
