feat(export): Add .docx export (#151)
* feat(export): Add .docx export

* feat(export): Add .docx export

A bit of cleanup on the previous commit.

* feat(export): Fixed formatting for export

* feat(export): Fix formatting for export

Move the Word doc logic into a new module and include a unit test to
cover it.

Also fix a bug with the way control characters are scrubbed from the
.docx text.

* feat(export): Fix formatting for export

Fix flake8 errors and add a test for the docx branch of the view.

* feat(export): Fix formatting for export

Change print() to logging so that it will work cleanly when merged into
master.

* Update views.py

* sets already guarantee uniqueness, remove key= in sorted because it errors out on TAXXXX techniques.

Co-authored-by: ben <benjamin.snyder@entegrasystems.com>
Co-authored-by: Emmanuelle Vargas-Gonzalez <emmanuelle@mitre.org>

--- a/src/tram/tram/templates/index.html
+++ b/src/tram/tram/templates/index.html
@@ -59,7 +59,8 @@
               Export
             </button>
             <div class="dropdown-menu" aria-labelledby="export-dropdown">
-              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json">JSON</a>
+              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?format=json&?type=json">JSON</a>
+              <a class="dropdown-item btn btn-sm btn-outline-secondary" href="/api/report-export/{{ report.id }}/?type=docx">DOCX</a>
             </div>
           </div>
           <!-- <a href="#" class="btn btn-sm btn-outline-secondary">Download</a> -->
