--- a/src/tram/tram/templates/analyze.html
+++ b/src/tram/tram/templates/analyze.html
@@ -29,25 +29,25 @@
 
 <div id="addMappingModal" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-md">
-        <div class="modal-content">
+        <div class="modal-content" id="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Mapping</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id='modal-body'>
                 <form id="add-technique-form">
-                    <select id="technique-select" class="form-select">
+                    <select id="technique-select" class="form-select select2-use" multiple='multiple'>
                         {% for technique in attack_techniques %}
                         <option value="{{technique.attack_id}}">{{technique.attack_id}} - {{technique.name}}</option>
                         {% endfor %}
                     </select>
-                    <input id="sentence-id" type="hidden" value="TBD">
+                    <input id="sentence-id" type="hidden" value="TBD"> 
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="add-mapping-button" type="button" class="btn btn-primary" data-dismiss="modal"
-                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()))">Add</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button id="add-mapping-button" type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), false)">Add</button>
             </div>
         </div>
     </div>
