--- a/src/tram/tram/templates/technique_sentences.html
+++ b/src/tram/tram/templates/technique_sentences.html
@@ -35,22 +35,23 @@ Sentences may contain additional mappings.
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Add Mapping</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="add-technique-form">
-                    <select id="technique-select" class="form-select">
+                    <select id="technique-select" class="form-select select2-use" multiple='multiple'>
                         {% for technique in attack_techniques %}
                         <option value="{{technique.attack_id}}">{{technique.attack_id}} - {{technique.name}}</option>
                         {% endfor %}
                     </select>
                     <input id="sentence-id" type="hidden" value="TBD">
+                    <input id="report-id" type="hidden" value="TBD">
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button id="add-mapping-button" type="button" class="btn btn-primary" data-dismiss="modal"
-                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()))">Add</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button id="add-mapping-button" type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), parseInt($('#report-id').val()))">Add</button>
             </div>
         </div>
     </div>
