--- a/src/tram/templates/analyze.html
+++ b/src/tram/templates/analyze.html
@@ -19,6 +19,7 @@
     <div id="sentence-container" class="col overflow-scroll" style="max-height: 500px;">
         <h4>Report Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
+            <caption>Sentences in the report.</caption>
             <!-- Contents rendered by JavaScript -->
         </table>
     </div>
@@ -41,13 +42,13 @@
                         <option value="{{technique.attack_id}}">{{technique.attack_id}} - {{technique.name}}</option>
                         {% endfor %}
                     </select>
-                    <input id="sentence-id" type="hidden" value="TBD"> 
+                    <input id="sentence-id" type="hidden" value="TBD">
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                 <button id="add-mapping-button" type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), false)">Add</button>
+                    onclick="addMapping($('#technique-select').val(), parseInt($('#sentence-id').val()), false)">Add</button>
             </div>
         </div>
     </div>
