--- a/src/tram/templates/technique_sentences.html
+++ b/src/tram/templates/technique_sentences.html
@@ -21,7 +21,11 @@ Sentences may contain additional mappings.
         <h4>Sentences</h4>
         <table id="sentence-table" class="table table-striped table-hover">
             <caption>Sentences</caption>
-            <th scope="col">This table should be re-rendered and this text should not be visible.</th>
+                <tbody>
+                    <tr>
+                        <th scope="col">This table should be re-rendered and this text should not be visible.</th>
+                    </tr>
+                </tbody>
             <!-- Contents rendered by JavaScript -->
         </table>
     </div>
