a few more elements to change

--- a/src/tram/templates/tram_documentation.html
+++ b/src/tram/templates/tram_documentation.html
@@ -37,7 +37,7 @@
           <td>Dashboard for managing reports</td>
           <td>
               <a href="/">
-                <i class="fas fa-external-link-square-alt"></i>
+                <em class="fas fa-external-link-square-alt"></em>
               </a>
           </td>
         </tr>
@@ -46,7 +46,7 @@
           <td>Management UI For Machine Learning Models</td>
             <td>
               <a href="/ml/">
-                <i class="fas fa-external-link-square-alt"></i>
+                <em class="fas fa-external-link-square-alt"></em>
               </a>
           </td>
         </tr>
@@ -55,7 +55,7 @@
           <td>Direct Database Interface</td>
             <td>
               <a href="/admin/">
-                <i class="fas fa-external-link-square-alt"></i>
+                <em class="fas fa-external-link-square-alt"></em>
               </a>
           </td>
         </tr>
@@ -64,7 +64,7 @@
           <td>TRAM documentation</td>
             <td>
               <a href="/docs/">
-                <i class="fas fa-external-link-square-alt"></i>
+                <em class="fas fa-external-link-square-alt"></em>
               </a>
           </td>
         </tr>
