add text to the upload button to better guide users

--- a/src/tram/templates/base.html
+++ b/src/tram/templates/base.html
@@ -49,6 +49,7 @@
                         {% csrf_token %}
                         <label for="id-upload" class="btn btn btn-outline-light"
                             title="Upload File (valid: .pdf, .docx, .html, .json, .txt)">
+                            <span class="px-1">Upload Report</span>
                             <em class="fas fa-upload"></em>
                         </label>
                         <input type="file" id="id-upload" style="display: none; height: max-content;"
