enclose the index link inside a block
modify its content on the analyze page to provide a button with more relevant text

--- a/src/tram/templates/analyze.html
+++ b/src/tram/templates/analyze.html
@@ -11,6 +11,10 @@
 </script>
 {% endblock %}
 
+{% block back-to-index-link %}
+<a class="btn btn btn-outline-light" href="/">Close Report</a>
+{% endblock %}
+
 {% block body %}
 
 <h3 class="display-4 text-center">{{ report_name }}</h3>
