--- a/src/tram/templates/base.html
+++ b/src/tram/templates/base.html
@@ -76,7 +76,7 @@
                 <a href="https://github.com/center-for-threat-informed-defense/tram/">GitHub</a>
             </div>
             <div class="col text-end">
-                &copy; 2021 MITRE Engenuity. All rights reserved.
+                &copy; 2021 MITRE. All rights reserved.
             </div>
         </div>
     </footer>
